--- a/Week 1/Day 02/ex01/shop.css
+++ b/Week 1/Day 02/ex01/shop.css
@@ -20,6 +20,29 @@ footer {
 	
 }
 
+h2, h3 {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin-bottom: 3px;
+	margin-top: 5px;
+}
+
+div {
+	margin-bottom: 50px;
+}
+
+img {
+	width: 400px;
+	height: 400px;
+	border-radius: 50%;
+	box-shadow: 0 35px 80px rgba(0, 0, 0, 0.75);
+	transform: translateY(50px);
+	transform: translateX(0px);
+	transition: 1s;
+	border: 7px solid rgb(255, 251, 251);
+}
+
 p {
 	font-size: 15px;
 	margin-top: 1px;
@@ -131,5 +154,4 @@ p {
 	border: 1px solid #555;
 	color: #999;
 	background: #fff;
-
 }
